--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "dotenv": "^16.4.0",
     "ethers": "^5.5.3",
     "framer-motion": "^11.0.3",
-    "hardhat-deploy": "^0.11.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  
+  }
 }
